fix overflow in mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -477,6 +477,19 @@ header {
 
         .marquee-container {
             margin-top: 24px;
+            transform: rotate(0);
+            height: 80px;
+            &::after{
+                display: none;
+            }
+
+            .swiper{
+                height: 80px;
+            }
+
+            .content-swip {
+                height: 80px;
+            }
         }
         p {
             margin: 24px 0;
@@ -595,29 +608,6 @@ header {
 }
 
 .video_wrapper {
-    // background-image: url("../images/bg-video.webp");
-    // height: 99vh;
-    // background-size: cover;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    // background-position: center;
-    // img {
-    //     position: relative;
-    //     left: -12px;
-    // }
-
-    // @media (max-width: 900px) {
-    //     height: 500px;
-    //     img {
-    //         left: -6px;
-    //         height: 100px;
-    //     }
-    // }
-
-    // @media (max-width: 650px) {
-    //     height: 400px;
-    // }
     video {
         width: 100%;
         height: auto;
@@ -1161,15 +1151,14 @@ header {
         align-items: flex-end;
         & > div {
             cursor: default;
-            transition: transform 0.7s!important;
+            transition: transform 0.7s !important;
             &:hover {
                 transform: scale(1.1);
             }
             border-radius: 16px 64px 16px 16px;
             max-width: 372px;
-            flex: 1;
+            width: 32%;
             position: relative;
-          
             z-index: 1;
             & > div {
                 background-color: rgba(14, 12, 21, 0.9);
@@ -1291,7 +1280,7 @@ header {
     }
 
     @media (max-width: 1100px) {
-        padding: 80px 0 80px 0;
+        padding: 30px 0 30px 0;
         .card_pack_wrapper {
             margin-top: 140px;
         }
@@ -1302,6 +1291,8 @@ header {
             align-items: center;
             & > div {
                 margin-bottom: 96px;
+                width: calc(100% - 28px);
+
             }
         }
     }
@@ -1439,6 +1430,7 @@ header {
     }
 
     @media (max-width: 490px) {
+        padding: 0px 0px;
         .team_content {
             padding: 0 16px 16px 16px;
             .text-team {
@@ -1447,6 +1439,8 @@ header {
             .image-team {
                 img {
                     height: 300px;
+                    max-width: 100%;
+                    object-fit: cover;
                 }
             }
         }
